text editor via right click on Notes field.
[1750010] Drag&Drop between databases now supported.
[1517048] PasswordSafe can now be installed as an msi package (Windows
installer). This allows site administrators to 'push' PasswordSafe to
client machines with group policy. Thanks to xenophonf.
[1751484] Error log file produced when Merging and Importing text file.

Bugs fixed in 3.09
==================
[1748665] Number of passwords to remember (password history) can now
be set to more than 99 by typing rather than only by spinbox.
[] A note on possible problems with the autotype functionality and
some 3rd party popup-blockers. Thanks to mrttoo for the heads-up.
[] Protect user from losing entries in case of non-unique uuids in
read database. 
[] Compare fixed so that 'X' indicating differences are
in the correct columns and data copied to clipboard ends in CRLF not just LF
[1739364] Window location issue fixed
[1620423, 1754189] Focus on search text in Find Dialog - thank to zcecil for
the fix for this one. 
[1738477, 1630400] A version for Windows98 is now installed by the
installer on machines running Windows98. This version is NOT part of
the binaries in the zip file.
[] The installer will detect and notify the user if attempts to
install on an unsupported version of Windows (95 & ME).
[1735290] Configuration file works with non-ASCII user and host
names.
[1733911] File mode encryption/decryption (-d/-e) works again
[1743706] Fix random showing of user and passwords if started in
silent mode.
[] Fix Edit and View in main menu not being reset after open after close
[1727871] Found items remain highlighted if another entry selected -
note that found items now ddisplayed in bold font rather than
highlighted.
[1728612] Column sort arrows, in Flattened List mode, correctly removed
[1728945] Importing a subset of text data now fixed
[1728945, 1741787] Version 2.x databases now read correctly
[1733740] '-s' option no longer causes sporadic display of passwords