@@ -165,6 +165,7 @@ public:
   void AutoResizeColumns();
   void ResetIdleLockCounter();
   bool ClearClipboardData() {return m_clipboard.ClearData();}
+  void UnilaterallyClearClipboard() {m_clipboard.UnilaterallyClearData();}
   bool SetClipboardData(const CMyString &data)
   {return m_clipboard.SetData(data);}
   void AddEntries(CDDObList &in_oblist, const CMyString &DropGroup);
@@ -313,6 +314,7 @@ protected:
 #if !defined(POCKET_PC)
 	afx_msg void OnTrayLockUnLock();
   afx_msg void OnUpdateTrayLockUnLockCommand(CCmdUI *pCmdUI);
+  afx_msg void OnUnilaterallyClearClipboard();
   afx_msg void OnTrayClearRecentEntries();
   afx_msg void OnUpdateTrayClearRecentEntries(CCmdUI *pCmdUI);
 	afx_msg void OnTrayCopyUsername(UINT nID);
