@@ -197,6 +197,8 @@ BEGIN
             MENUITEM SEPARATOR
         END
         MENUITEM SEPARATOR
+        MENUITEM "&Unilaterally Clear Clipboard", ID_MENUITEM_UNICLEARCLIPBOARD
+        MENUITEM SEPARATOR
         MENUITEM "&Minimize",                   ID_MENUITEM_MINIMIZE
         MENUITEM "&Restore",                    ID_MENUITEM_UNMINIMIZE
         MENUITEM SEPARATOR
