@@ -73,6 +73,7 @@
 #define ID_TRAYRECENT_ENTRY_CLEAR       32501
 #define ID_MENUITEM_MINIMIZE            32502
 #define ID_MENUITEM_UNMINIMIZE          32503
+#define ID_MENUITEM_UNICLEARCLIPBOARD   32504
 
 // System Tray menu
 #define ID_MENUITEM_TRAYAUTOTYPE        32550
